Add explanation section

--- a/style.css
+++ b/style.css
@@ -28,7 +28,8 @@ body {
     height: 15em;
 }
 
-.section p {
+.section p,
+.section li {
     font-size: 2em;
     font-family: Calibri;
     text-align: center;
