--- a/style.css
+++ b/style.css
@@ -4,6 +4,11 @@ body {
     padding: 0;
 }
 
+.active {
+    background-color: violet;
+    border-radius: 1em;
+}
+
 .centered-title {
     display: flex;
     align-items: center;
@@ -39,4 +44,41 @@ br {
     content: "";
     display: block;
     margin-bottom: 5em;
+}
+
+.nav {
+    border-radius: 25px;
+    list-style-type: none;
+    margin: 0;
+    margin-top: 1em;
+    padding: 0;
+    width: 90%;
+    overflow: hidden;
+    background-color: #333;
+    margin-left: auto;
+    margin-right: auto;
+    font-family: Lato;
+}
+
+.nav li {
+    display: inline;
+    margin-right: 0.5em;
+    float: left;
+}
+
+.nav li a {
+    display: block;
+    color: white;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+}
+
+.nav li.active a:hover {
+    background-color: violet;
+}
+
+.nav li a:hover {
+    background-color: #111;
+    border-radius: 1em;
 }
