--- a/style.css
+++ b/style.css
@@ -46,23 +46,27 @@ br {
     margin-bottom: 5em;
 }
 
+.nav-container {
+    display: flex;
+    justify-content: center;
+}
+
 .nav {
+    display: inline-block;
     border-radius: 25px;
     list-style-type: none;
     margin: 0;
     margin-top: 1em;
     padding: 0;
-    width: 90%;
     overflow: hidden;
     background-color: #333;
-    margin-left: auto;
-    margin-right: auto;
     font-family: Lato;
 }
 
 .nav li {
     display: inline;
-    margin-right: 0.5em;
+    margin-right: 0.25em;
+    margin-left: 0.25em;
     float: left;
 }
 
