--- a/style.css
+++ b/style.css
@@ -9,7 +9,9 @@
 }
 
 @media (min-width: 768px) {
-    
+    .embedButton {
+        display: none;
+    }
 }
 
 html {
@@ -28,7 +30,7 @@ body {
 }
 
 .box {
-    width: 15em;
+    width: 40vw;
     min-height: 15em;
     background-color: #fff7d3;
     border-radius: 25px;
@@ -40,7 +42,7 @@ body {
 .box h2 {
     font-family: Lato;
     text-align: center;
-    font-size: 3em;
+    font-size: clamp(1.75rem, 6vw, 3.5rem);
     font-weight: 300;
 }
 
@@ -71,7 +73,7 @@ button {
     cursor: pointer;
 }
 
-.box a button:hover {
+button:hover {
     background-color: violet;
 }
 
@@ -83,7 +85,7 @@ button {
     display: flex;
     align-items: center;
     justify-content: center;
-    font-size: 6vw;
+    font-size: 6vh;
     text-transform: uppercase;
     font-family: Calibri;
     color: white;
